# trustauthority-client-for-python

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: onmergerelease.yml  onpullrequest.yml  security-scans.yml
examples/: .env
examples/tdx_sample_app/: Dockerfile  README.md  docker-compose.yml  tdx_sample_app.py
inteltrustauthorityclient/base/: evidence_adapter.py
inteltrustauthorityclient/cli/: README.md
inteltrustauthorityclient/cli/test/: .coverage  test_trustauthority-pycli.py
inteltrustauthorityclient/cli/trustauthority-pycli/: trustauthority-pycli.py
inteltrustauthorityclient/configfs_tsm/: report.py
inteltrustauthorityclient/connector/: README.md  config.py  connector.py  evidence.py
inteltrustauthorityclient/examples/: .env
inteltrustauthorityclient/examples/sgx_sample_app/: Dockerfile  README.md  docker-compose.yml  sgx_sample_app.py
inteltrustauthorityclient/examples/sgx_sample_app/minimal-enclave/: Enclave.config.xml  Enclave.cpp  Enclave.edl  Enclave_t.c  Enclave_t.h  Enclave_u.c  Enclave_u.h  Makefile  utils.cpp  utils.h
inteltrustauthorityclient/examples/tdx_sample_app/: Dockerfile  README.md  docker-compose.yml  tdx_sample_app.py
inteltrustauthorityclient/nvgpu/: README.md  gpu_adapter.py
inteltrustauthorityclient/resources/: constants.py
inteltrustauthorityclient/sgx/intel/: README.md  sgx_adapter.py
inteltrustauthorityclient/src/connector/: README.md  config.py  connector.py
inteltrustauthorityclient/src/resources/: constants.py  logger.py
inteltrustauthorityclient/src/sgx/intel/: README.md  sgx_adapter.py
inteltrustauthorityclient/src/tdx/azure/: README.md  azure_tdx_adapter.py
inteltrustauthorityclient/src/tdx/gcp/: README.md  gcp_tdx_adapter.py
inteltrustauthorityclient/src/tdx/intel/: README.md  tdx_adapter.py
inteltrustauthorityclient/tdx/: README.md  tdx_adapter.py
inteltrustauthorityclient/tdx/azure/: README.md  azure_tdx_adapter.py
inteltrustauthorityclient/tdx/gcp/: README.md  gcp_tdx_adapter.py
inteltrustauthorityclient/tdx/intel/: README.md  tdx_adapter.py
resources/: logging.py
src/: __init__.py
src/base/: evidence_adapter.py
src/connector/: config.py  connector.py  evidence.py
src/resources/: constants.py
src/tdx/: azure_adapter.py  tdx_adapter.py
src/tdx/azure/: azure_tdx_adapter.py
src/tdx/intel/: README.md  tdx_adapter.py
test/: README.md  config_test.py  connector_test.py  mock_server.py  test_azure_tdx_adapter.py  test_config.py  test_connector.py  test_gcp_tdx_adapter.py  test_intel_sgx_adapter.py  test_intel_tdx_adapter.py  test_nvdia_gpu_adapter.py  test_tdx_adapter.py
