[tool.poetry]
name = "applications.security.amber.trustauthority-client-for-python"
version = "1.2.0"
description = "Intel Trust Authority Client in Python"
authors = ["Kamal, Shefali <shefali.kamal@intel.com>", "Bala, K Manisai <k.manisai.bala@intel.com>", "Yoon, Eunjung <eunjung.yoon@intel.com>"]
license = "Copyright (c) 2024-2025 Intel Corporation. All rights reserved."
readme = "README.md"
packages = [{include = "inteltrustauthorityclient"}]
exclude = ["inteltrustauthorityclient/examples"]

[tool.poetry.dependencies]
python = "^3.10"
validators = "^0.22.0"
resources = "^0.0.1"
staty = "^1.2.4"
requests = "^2.34.1"
cryptography = {version = ">=46.0.7,<49.0.0", python = ">=3.8,<3.9.0 || >3.9.1,<4.0"}
pyjwt = "^2.12.0"
tenacity = "^8.2.3"
coverage = "^7.4.2"
pytest = "^9.0.3"
nvidia-ml-py = "^12.550.52"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
